--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,6 +1,31 @@
-html, body, #root {
+html,
+body,
+#root {
     height: 100%;
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+}
+
+
+#root *::-webkit-scrollbar {
+    width: 12px;
+}
+
+
+#root *::-webkit-scrollbar-track {
+    background: #f8f9fa;
+    border-radius: 10px;
+}
+
+
+#root *::-webkit-scrollbar-thumb {
+    background-color: gray;
+    border-radius: 10px;
+    border: 2px solid #f8f9fa;
+}
+
+
+#root *::-webkit-scrollbar-thumb:hover {
+    background-color: #888;
 }
